--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
-div {
-    height: 100px;
-    width: 100px;
-    background-color: red;
-    float: left;
-    margin: 3px;
-    cursor: pointer;
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#map {
+/*    width: 100%;*/
+    height: 100%;
 }
