--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,13 @@ html, body {
 /*    width: 100%;*/
     height: 100%;
 }
+
+
+#map img {
+	display: block; 
+	margin: 0 auto;
+}
+
+#map a {
+	text-decoration: none;
+}
